# libsx-mirror

./: CHANGES  HELP  HINTS  LICENSE  Makefile.am  Makefile.in  Makefile.no_auto  README  aclocal.m4  config.h.in  configure  configure.ac  libsx.pc.in  libsx_defs
bezier/: Makefile.no_auto  bezier.c  bezier.h  callbacks.c  callbacks.h  gfx.c  gfx.h  main.c  main.h
controlbox/: Makefile.no_auto  callbacks.c  controlbox.c  controlbox.h  main.c
creq/: Makefile.no_auto  creq.c  creq.h  main.c
demo0/: Makefile.no_auto  callbacks.c  callbacks.h  foo.h  foo0.c  hello_world.c  main.c  main.h  main0.c  test.c
demo1/: Makefile.no_auto  callbacks.c  callbacks.h  main.c  main.h
demo2/: Makefile.no_auto  callbacks.c  callbacks.h  main.c  main.h
demo3/: Makefile.no_auto  callbacks.c  callbacks.h  main.c  main.h
demo4/: Makefile.no_auto  demo4.c  thing1.h  thing2.h  thing3.h  thing4.h
docs/text/: color.doc  functions.doc  general.libsx.doc  label.doc  misc.doc  popups.doc  scrollbar.doc  windows.doc
draw_demo/: Makefile.no_auto  draw_demo.c
frac/: Makefile.no_auto  frac.c
freq/: Makefile.am  Makefile.in  Makefile.no_auto  dirlist.c  freq.c  freq.h  main.c  simple_freq.c
m4/: Xaw.m4
m4/CVS/: Entries  Repository  Root
multireq/: Makefile.no_auto  libsx.h  main.c  multireq.c  multireq.h
pcurve/: Makefile.no_auto  pcurve.c
skel/: Makefile.no_auto  callbacks.c  callbacks.h  main.c  main.h
xmore/: Makefile.no_auto  xmore.c
xrootbg/: Makefile.no_auto  xrootbg.c
